GNOME Bugzilla – Bug 627368
[notification_area] Fix some bugs from the GSEALing
Last modified: 2010-08-23 17:10:09 UTC
there may be similar problems elsewhere; we were only looking at the na-tray code
Created attachment 168290 [details] [review] [notification_area] Fix some bugs from the GSEALing na-tray-child.c had C99 mixed code and declarations. na-tray-manager.c was calling methods on an object before checking that it was non-NULL Noticed while syncing the code to gnome-shell, bug 627306
Review of attachment 168290 [details] [review]: Thanks, please commit.
Attachment 168290 [details] pushed as e08b975 - [notification_area] Fix some bugs from the GSEALing