[notification_area] Fix some bugs from the GSEALing

na-tray-child.c had C99 mixed code and declarations.
na-tray-manager.c was calling methods on an object before checking that
it was non-NULL

Noticed while syncing the code to gnome-shell, bug 627306

https://bugzilla.gnome.org/show_bug.cgi?id=627368